--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,8 @@ dependencies:
     sdk: flutter
   image: ^3.0.2
   path_provider: ^2.0.8
-  ffmpeg_kit_flutter_min_gpl: ^4.5.1
+ # ffmpeg_kit_flutter_min_gpl: ^4.5.1
+  ffmpeg_kit_flutter_full: ^4.5.1
   permission_handler: ^11.0.0
 
 dev_dependencies:
